# shellac

./: .gitignore  Shellac.cabal  cabal.project  cabal.project-9.10.1
.github/workflows/: haskell-ci.yml
shellac-haskeline/: Shellac-haskeline.cabal  cabal.project
src/System/Console/Shell/: Backend.hs  RunShell.hs  Types.hs
src/System/Console/Shell/Backend/: Basic.hs
