cabal-version:  3.0
Name:           Shellac-haskeline
Version:        0.9.9.1
Build-Type:     Simple
License:        BSD-3-Clause
License-File:   LICENSE
Copyright:      (c) Judah Jacobson
Author:         Judah Jacobson
Maintainer:     Rob Dockins <robdockins@fastmail.fm>
Category:       User Interfaces
Synopsis:       Haskeline backend module for Shellac
Description:    This module provides a backend for Shellac using the Haskeline library.  It
                provides rich line editing capabilities, command completion and command
                history features.
Stability:      Experimental

tested-with: GHC == { 9.10.1 }

Source-repository head
  type:     git
  location: https://github.com/robdockins/shellac
  subdir:   shellac-haskeline

Library
    Build-depends: base      >= 3 && < 5,
                   Shellac   == 0.9.9.1,
                   haskeline >= 0.8.3.0 && < 0.9,
                   mtl       >= 2.3.1 && < 2.4
    Exposed-Modules:
                System.Console.Shell.Backend.Haskeline
    Default-Language: Haskell2010
    ghc-options: -Wall
